# conftool-export-llm-parser

./: .env_placeholder  .gitignore  LICENSE  README.md
conftool_helper/: Cargo.toml
conftool_helper/prompts/system/: mandatory_reviewer_parse.md
conftool_helper/prompts/user/: mandatory_reviewer_parse.md
conftool_helper/src/: main.rs  mandatory_reviewers.rs  openai.rs
