[package]
name = "conftool_helper"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.29"
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread"] }
